[package]
name = "problems"
version = "0.1.0"
edition = "2024"

# This package contains multiple binaries
[[bin]]
name = "weird_algorithm"
path = "src/bin/01_weird_algorithm.rs"

[[bin]]
name = "missing_number"
path = "src/bin/02_missing_number.rs"

[[bin]]
name = "repetitons"
path = "src/bin/03_repetitons.rs"

[dependencies]
